--- a/citation.bib
+++ b/citation.bib
@@ -1,8 +1,9 @@
-@misc{.github,
+@software{.github,
   author       = {Porter, Matthew A.},
   title        = {.github},
   year         = {2025},
-  note         = {Version 2025-05-01. Not yet indexed by Zenodo.},
-  howpublished = {\url{https://github.com/qompassai/.github}},
-  organization = {Qompass AI}
+  license      = {Apache-2.0},
+  publisher    = {Zenodo},
+  version      = {2025-07-19},
+  url          = {https://github.com/qompassai/.github}
 }
